ndb - bug#18026   incorrect handling of varsize primary key and charsets in tup-scan

storage/ndb/src/kernel/blocks/dblqh/DblqhMain.cpp:
  put tracenr log in signal log instead...as out file gets very big...
storage/ndb/src/kernel/blocks/dbtup/DbtupScan.cpp:
  PK needs to be normalized before computing hashvalue, otherwise lock-req will not find row,
    causing assertion in debug build, and inconsistency in release